# Otus_profesional_homework_IP_filter

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: HW_2_action.yml
src/: ip_filter.cpp  ip_filter_copy.tsv  ip_lib.cpp  ip_lib.h
src/lib/: IP_lib.cpp  IP_lib.h
